--- a/app/assets/stylesheets/cards.scss
+++ b/app/assets/stylesheets/cards.scss
@@ -1,33 +1,66 @@
-.card_add {
+.must_check {
+  width: 30px;
+  border-radius: 4px;
+  background-color: #ff0211;
+  color: #fff;
+  margin-left: 8px;
+  margin-right: auto;
+  font-size: 12px;
+  padding: 2px;
+}
+
+.title {
+  height: 50px;
+  line-height: 50px;
+  border-bottom: 1px solid #f5f5f5;
+}
+
+#string {
+ font-size: 14px;
+}
+
+.card {
   background-color: #f5f5f5;
-  width: 700px;
-  margin: auto;
-  text-align: center;
-  .title {
-    height: 50px;
-    line-height: 50px;
-    border-bottom: 1px solid #f5f5f5;
-  }
-    .number-details {
-      .card-number {
-        font-size: 14px;
-      }
-      .must_check {
-        background-color: red;
-        color: #fff;
-        margin: 0 0 0 8px;
-        padding: 2px 4px;
-        font-size: 12px;
-        vertical-align: top;
-        width: 32px;
-        height: 19px;
-      }
-    }
-    .number {
-      width: 100%;
-      height: 48px;
-      margin-left: auto;
+  padding: 20px 0;
+  &__add {
+    background-color: #ffffff;
+    width: 700px;
+    margin: auto;
+    text-align: center;
+
+    .rapper_form {
+      font-size: 14px;
+      width: 343px;
+      height: auto;
       margin-right: auto;
-      display: block;
+      margin-left: auto;
+
+        .number-details {
+          display: flex;
+          position: relative;
+          align-items: center;
+          padding: 20px 20px 0 20px;
+
+          .card-number {
+            @extend #string
+          }
+        }
+        .number {
+          width: 100%;
+          height: 48px;
+          margin-left: auto;
+          margin-right: auto;
+          display: block;
+        }
+
+        .expirationdate {
+          &__details {
+            display: flex;
+            .date {
+              @extend #string
+            }
+          }
+        }
     }
+  }
 }
