--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -7,7 +7,7 @@
         = link_to "ログアウト",destroy_user_session_path, method: :delete, class:"my__page__function"
         .header__inner__bar__registration
         .header__inner__bar__registration__Rogin
-        = link_to "クレジットカードを登録する",new_card_path, class:"my__page__function2"
+        = link_to "クレジットカードを登録する",new_card_path, class:"my__page__function2" ,"data-turbolinks": false
       
       
       - if @favorite_list.present? # お気に入り機能
