--- a/app/views/cards/show.html.haml
+++ b/app/views/cards/show.html.haml
@@ -11,4 +11,4 @@
     %button.delete-btn 削除する
   = form_tag(card_path(current_user.id), method: :delete, id: 'charge-edit_form',  name: "inputForm") do
     %input{ type: "hidden", name: "card_id", value: "" }
-    %button.delete-btn 編集する
+    %button.delete-btn カードを編集する
