--- a/app/views/favorites/_favorite.html.haml
+++ b/app/views/favorites/_favorite.html.haml
@@ -10,7 +10,7 @@
       いいね！
       = item.favorites.count
 - else 
-  = link_to item_favorites_path, class: "favorite", remote: false do
+  = link_to item_favorites_path(item.id), class: "favorite", remote: false do
     = icon('far', 'heart')
     いいね！
     = item.favorites.count
