--- a/app/views/items/_top-main.html.haml
+++ b/app/views/items/_top-main.html.haml
@@ -97,7 +97,22 @@
                     %li
                     = icon('fa', 'star')
                   %p.zei (税込)
-                  = render partial: "favorites/favorite", locals: { item: @items_last_five[index]}
+                  - if user_signed_in?
+                    - if @items_last_five[index].favorited_by?(current_user)
+                      = icon('fas', 'heart')
+                      いいね！
+                      = @items_last_five[index].favorites.count
+                    - else 
+                      = icon('far', 'heart')
+                      いいね！
+                      = @items_last_five[index].favorites.count
+                  -# - else 
+                  -#   = link_to item_favorites_path(item.id), class: "favorite", remote: false do
+                  -#     = icon('far', 'heart')
+                  -#     いいね！
+                  -#     = item.favorites.count
+                  
+
   .main__pic6
     %h2.title ピックアップブランド
     .main__pic6__box
