--- a/app/views/items/_top-main.html.haml
+++ b/app/views/items/_top-main.html.haml
@@ -106,11 +106,10 @@
                       = icon('far', 'heart')
                       いいね！
                       = @items_last_five[index].favorites.count
-                  -# - else 
-                  -#   = link_to item_favorites_path(item.id), class: "favorite", remote: false do
-                  -#     = icon('far', 'heart')
-                  -#     いいね！
-                  -#     = item.favorites.count
+                  - else 
+                    = icon('far', 'heart')
+                    いいね！
+                    = @items_last_five[index].favorites.count
                   
 
   .main__pic6
